# nlp_sentiment_model_post

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: text.py
app/models/: text.py
app/services/: text.py
experiments/: Research Template.ipynb
experiments/observations/: example_observations.ipynb
saved_models/: README.md
tests/app/api/: test_text.py  test_users.py
tests/app/main/: test_root.py
