[tool.poetry]
name = "blogging_template"
version = "0.1.0"
description = ""
authors = ["Blake Danson <blakedanson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
fastapi = "^0.75.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"
jupyterlab = "^3.3.2"
matplotlib = "^3.5.1"
pandas = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
